Provided image and header

--- a/recipes/pork-belly-adobo.html
+++ b/recipes/pork-belly-adobo.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Pork Belly Adobo with Garlic Fried Rice</h1>
+        <img src="../images/Pork_Belly_Adobo.jpg" alt="Picture of Pork Belly Adobo">
     </body>
 </html>
