--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/pork-belly-adobo.html">Pork Belly Adobo</a>
     </body>
 </html>
