Description and Ingredients added

--- a/recipes/pork-belly-adobo.html
+++ b/recipes/pork-belly-adobo.html
@@ -8,5 +8,24 @@
     <body>
         <h1>Pork Belly Adobo with Garlic Fried Rice</h1>
         <img src="../images/Pork_Belly_Adobo.jpg" alt="Picture of Pork Belly Adobo">
+        <h2>A Dish made by Disneyland I recreated</h2>
+        <p>This is a dish made by Disneyland during their Festival of Holidays I recreated. Contains pork belly, garlic fried rice, green onions, and chicharrón.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 pounds pork belly</li>
+            <li>1/2 cup soy sauce</li>
+            <li>1/2 vinegar</li>
+            <li>1 cup water</li>
+            <li>1 1/2 tbs brown sugar</li>
+            <li>black pepper</li>
+            <li>white rice</li>
+            <li>2 heads of garlic</li>
+            <li>avocado oil</li>
+            <li>6 cloves roasted garlic</li>
+            <li>3 tbs garlic oil</li>
+            <li>green onion</li>
+            <li>chicharrón</li>
+        </ul>
     </body>
+
 </html>
