Ordered list of steps on how to cook added

--- a/recipes/pork-belly-adobo.html
+++ b/recipes/pork-belly-adobo.html
@@ -18,7 +18,7 @@
             <li>1 cup water</li>
             <li>1 1/2 tbs brown sugar</li>
             <li>black pepper</li>
-            <li>white rice</li>
+            <li>cooked white rice</li>
             <li>2 heads of garlic</li>
             <li>avocado oil</li>
             <li>6 cloves roasted garlic</li>
@@ -26,6 +26,24 @@
             <li>green onion</li>
             <li>chicharrón</li>
         </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat oven to 250 degrees</li>
+            <li>Peel garlic cloves and add to loaf pan</li>
+            <li>Cover garlic cloves with enough avocado oil to submerge the garlic</li>
+            <li>Cook garlic in preheated oven for 2 hours. Transfer to jar when cooled</li>
+            <li>Cut pork belly into desired shapes</li>
+            <li>Season pork belly with black pepper</li>
+            <li>Make sauce by combining soy sauce, vinegar, water, and brown sugar. Stir until sugar dissolves</li>
+            <li>Fry pork belly with roasted garlic oil in dutch oven until brown</li>
+            <li>Reduce heat to medium, medium-low and add the sauce and cover for 1 1/2 hours or until pork belly is tender</li>
+            <li>While pork belly is almost done, combine cooked (preferably day old) rice with 4 tbs of roasted garlic oil</li>
+            <li>Fry rice until hot and no clumps of rice are present</li>
+            <li>Mince 6 cloves of roasted garlic and add to fried rice</li>
+            <li>Continue to for another 5-10 minutes</li>
+            <li>Chop green onions</li>
+            <li>To plate, add rice first, pork belly adobo on top, garnish with green onions and crumbled chicharrón</li>
+        </ol>
     </body>
 
 </html>
