--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pork-belly-adobo.html">Pork Belly Adobo</a>
+        <p><img src="https://media.istockphoto.com/photos/man-prepares-chicken-wings-with-cranberry-sauce-picture-id666208278?k=20&m=666208278&s=612x612&w=0&h=OJt9xjgF9ctWQRTGHvU2apGaNPa1pVq1NFwhklvQ8pg=" alt="man-prepares-chicken-wings-with-cranberry-sauce-picture"></p>
+        <ul>
+            <li><a href="./recipes/pork-belly-adobo.html">Pork Belly Adobo</a></li>
+        </ul>
     </body>
 </html>
