Steps list created

--- a/recipes/Pollo_Verde.html
+++ b/recipes/Pollo_Verde.html
@@ -37,7 +37,16 @@
         
         <h3>Steps</h3>
         <ol>
-            
+            <li>Place onion, peppers, celery, and garlic in a blender and pulse until smooth. Set aside</li>
+            <li>Set oven to broil.</li> 
+            <li>Heat oil over medium-high in a heavy bottom pot or dutch oven.</li> 
+            <li>Season chicken with salt. Place chicken parts in pot and brown, about two minutes per side. Work in batches to avoid crowding the pan.</li>
+            <li>Meanwhile, place tomatillo halves cut side down in a cast-iron pan. Broil until skins are charred and tomatillos have released their juices, about 5 minutes.</li> 
+            <li>Remove chicken from pot. Add in onion, pepper mixture to the pot. Reduce heat to medium and continue to cook until the mixture becomes golden, about 30 minutes stirring often.</li>
+            <li>Place the chicken pieces back in the pot along with the tomatillos and all the juices that were released in the pan.</li>
+            <li>Pour chicken stock into the pot and increase heat to high. Bring to an immediate boil then reduce heat to low and cover. Simmer until chicken is cooked through and tender, about 90 minutes.</li>  
+            <li>Season with salt and pepper. Pour in hominy and stir to warm through.</li> 
+            <li>Divide into bowls and garnish with onion, avocado, radish, cilantro, and sour cream.</li>
         </ol>
     </body>
 </html>
