--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/pork-belly-adobo.html">Pork Belly Adobo</a></li>
             <li><a href="./recipes/Pollo_Verde.html">Pollo Verde Soup</a></li>
+            <li><a href="./recipes/coleslaw.html">Coleslaw</a></li>
         </ul>
     </body>
 </html>
