Fixed typo line 14

--- a/recipes/Pollo_Verde.html
+++ b/recipes/Pollo_Verde.html
@@ -11,7 +11,7 @@
         <p><img src="../images/Verde_pollo_posole.jpg" alt="Pollo Verde Soup"></p>
         
         <h3>Matty Matheson's Pollo Verde Soup</h3>
-        <p>One of the best Youtube chef's make a Pollo Verde Soup</p>
+        <p>One of the best Youtube chef's make's a Pollo Verde Soup</p>
         
         <h3>Ingredients</h3>
         <ul>
