Fixed list for css

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./stylesheets/homepage-styles.css">
     </head>
     
     <body>
         <h1>Odin Recipes</h1>
-        <p><img src="https://media.istockphoto.com/photos/man-prepares-chicken-wings-with-cranberry-sauce-picture-id666208278?k=20&m=666208278&s=612x612&w=0&h=OJt9xjgF9ctWQRTGHvU2apGaNPa1pVq1NFwhklvQ8pg=" alt="man-prepares-chicken-wings-with-cranberry-sauce-picture"></p>
-        <ul>
-            <li><a href="./recipes/pork-belly-adobo.html">Pork Belly Adobo</a></li>
-            <li><a href="./recipes/Pollo_Verde.html">Pollo Verde Soup</a></li>
-            <li><a href="./recipes/coleslaw.html">Coleslaw</a></li>
-        </ul>
+        <p class="img"><img src="https://media.istockphoto.com/photos/man-prepares-chicken-wings-with-cranberry-sauce-picture-id666208278?k=20&m=666208278&s=612x612&w=0&h=OJt9xjgF9ctWQRTGHvU2apGaNPa1pVq1NFwhklvQ8pg=" alt="man-prepares-chicken-wings-with-cranberry-sauce-picture"></p>
+        <div class="recipes">
+            <a class="rec_one" href="./recipes/pork-belly-adobo.html">Pork Belly Adobo</a>
+                <a class="rec_two" href="./recipes/Pollo_Verde.html"> Pollo Verde Posole</a>
+                    <a class="rec_three" href="./recipes/coleslaw.html">Coleslaw</a>
+        </div>
     </body>
 </html>
